fix syntax confusion